[package]
name = "tcr_deploy"
version = "0.1.0"
authors = ["Kmoneal <kmacjoneal@gmail.com>", "Akua Nti <akua.nti@consensys.net"]

[dependencies]
ethabi="5.0"
web3="0.2.0"
rustc-hex="1.0.0"
serde="1.0"
serde_derive = "1.0"
serde_json="1.0"
solc="0.1.0"
tiny-keccak = "1.4.0"

[patch.crates-io]
solc = { git = "https://github.com/akuanti/solc-rs" }
web3 = { git = "https://github.com/akuanti/rust-web3", branch = "tcr_deploy" }
